fixed the overflow issue on work out page

--- a/src/styles/partials/_Workout.scss
+++ b/src/styles/partials/_Workout.scss
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
     text-align: center;
+    
     h1 {
         font-size: 1.2rem;
         font-family: "Open Sans", sans-serif;
@@ -15,7 +16,7 @@
     }
     td{
         border: 1px solid black;
-        padding: 3%;
+        padding: 2%;
     }
     th{
         font-family: "Open Sans", sans-serif;
